<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TutorialActivity">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:src="@drawable/ic_close"
        app:tint="@color/black"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/Tutor_title"
       android:background="@drawable/background_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="25sp"></TextView>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_below="@id/tv_tutorial"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/A1_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tutorial"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_a1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A1_Title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tv_a1_tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_a1_title"
                    android:layout_marginTop="10dp"
                    android:text="@string/A1_tutor"
                    android:textColor="@color/black"></TextView>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/A1_layout"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_a2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A2_Title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tv_a2_tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_a2_title"
                    android:layout_marginTop="10dp"
                    android:text="@string/A2_tutor"
                    android:textColor="@color/black"></TextView>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/A1_layout"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_b1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B1_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tv_b1_tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_b1_title"
                    android:layout_marginTop="10dp"
                    android:text="@string/B1_tutor"
                    android:textColor="@color/black"></TextView>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/A1_layout"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_b2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B2_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tv_b2_tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_b2_title"
                    android:layout_marginTop="10dp"
                    android:text="@string/B2_tutor"
                    android:textColor="@color/black">

                </TextView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>